Tabs added in EventsPage

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,3 +91,13 @@
   overflow: hidden;
   transition: height 0.3s ease;
 }
+
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
