--- a/frontend/src/SingleEventPage.module.css
+++ b/frontend/src/SingleEventPage.module.css
@@ -1,32 +1,40 @@
-.markdown {
-    text-align: center;
+/* .markdown {
     font-family: Arial, sans-serif;
-}
+} */
   
 .markdown h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-}
-
-.markdown h2 {
+    font-weight: bold;
     font-size: 2rem;
     margin-bottom: 1rem;
 }
 
+.markdown h2 {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
 .markdown h3 {
-    font-size: 1.75rem;
+    font-weight: bold;
+    font-size: 1.25rem;
     margin-bottom: 1rem;
 }
 
 .markdown p {
-    font-size: 1.25rem;
+    font-size: 1rem;
     margin-bottom: 1rem;
 }
 
 .markdown ul,
 .markdown ol {
     list-style-position: inside;
+    list-style: decimal;
     margin-bottom: 1rem;
+    margin-left: 25px;
+}
+
+.markdown ul {
+    list-style: circle;
 }
 
 .markdown li {
@@ -41,4 +49,9 @@
 
 .markdown a:hover {
     text-decoration: underline;
+}
+
+.markdown hr {
+    border-width: 1.5px;
+    margin: 10px;
 }
